# vector

./: .gitignore  .travis.yml  Changelog  HACKS  LICENSE  README.md  cabal.project  changelog  changelog.md  stack.yaml  vector.cabal
.github/workflows/: ci.yml
Data/: Vector.hs
Data/Vector/: Base.hs  Generic.hs  IVector.hs  MStream.hs  MVector.hs  Mutable.hs  Prim.hs  Primitive.hs  Safe.hs  Storable.hs  Stream.hs  Unboxed.hs
Data/Vector/Base/: Mutable.hs
Data/Vector/Fusion/: Bundle.hs  MStream.hs  Stream.hs  Util.hs
Data/Vector/Fusion/Bundle/: Monadic.hs  Size.hs
Data/Vector/Fusion/Stream/: Monadic.hs  Safe.hs  Size.hs  Step.hs
Data/Vector/Fusion/Stream/Monadic/: Safe.hs
Data/Vector/Generic/: Base.hs  Mutable.hs  New.hs  Safe.hs
Data/Vector/Generic/Mutable/: Base.hs  Safe.hs
Data/Vector/Generic/New/: Safe.hs
Data/Vector/Internal/: Check.hs
Data/Vector/MVector/: Mut.hs  New.hs
Data/Vector/Mutable/: IO.hs  ST.hs  Safe.hs
Data/Vector/Primitive/: Mutable.hs  Prim.hs  Safe.hs
Data/Vector/Primitive/Mutable/: IO.hs  ST.hs  Safe.hs
Data/Vector/Storable/: Internal.hs  Mutable.hs
Data/Vector/Stream/: Size.hs
Data/Vector/Unboxed/: Base.hs  Mutable.hs  Prim.hs  Safe.hs  Unbox.hs
Data/Vector/Unboxed/Mutable/: IO.hs  ST.hs  Safe.hs
bench/algorithms/: algorithms.cabal
bench/algorithms/Algo/: Tridiag.hs
benchmarks/: Main.hs  README.md  cabal.project  vector-benchmarks.cabal
benchmarks/Algo/: FindIndexR.hs  MinimumOn.hs  MutableSet.hs  StressGrow.hs
benchmarks/TestData/: Graph.hs
cbits/: memops.c  memops.h
include/: phases.h  stacktracetools.h  vector.h
internal/: GenUnboxTuple.hs  unbox-tuple-instances
old-testsuite/Testsuite/Vector/: AsList.hs
old-testsuite/microsuite/: Test.hs
tests/: Boilerplater.hs  Main.hs  Properties.hs  Utilities.hs  vector-tests.cabal
tests/Tests/: Bundle.hs  Move.hs  Stream.hs  Vector.hs
tests/Tests/Vector/: Boxed.hs  Primitive.hs  Property.hs  Storable.hs  Unboxed.hs  UnitTests.hs
util/: GenUnboxTuple.hs
vector/: README.md  changelog.md  vector.cabal
vector-bench-papi/: vector-bench-papi.cabal
vector-bench-papi/benchmarks/: Main.hs
vector-stream/: LICENSE  README.md  changelog.md  vector-stream.cabal
vector-stream/src/Data/Stream/: Monadic.hs
vector/benchlib/Bench/Vector/: Tasty.hs
vector/benchlib/Bench/Vector/Algo/: Applicative.hs  AwShCC.hs  FindIndexR.hs  HybCC.hs  Leaffix.hs  ListRank.hs  MutableSet.hs  NextPermutation.hs  Quickhull.hs  Rootfix.hs  Spectral.hs  Stddev.hs  Tridiag.hs
vector/benchlib/Bench/Vector/TestData/: Graph.hs  ParenTree.hs
vector/benchmarks/: Main.hs
vector/benchmarks/Algo/: FindIndexR.hs
vector/include/: vector.h
vector/internal/: GenUnboxTuple.hs  unbox-tuple-instances
vector/src/Data/: Vector.hs
vector/src/Data/Vector/: Generic.hs  Mutable.hs  Pattern.hs  Primitive.hs  Storable.hs  Strict.hs  Unboxed.hs  Unsafe.hs
vector/src/Data/Vector/Fusion/: Bundle.hs  Util.hs
vector/src/Data/Vector/Fusion/Bundle/: Monadic.hs  Size.hs
vector/src/Data/Vector/Fusion/Stream/: Monadic.hs
vector/src/Data/Vector/Generic/: Base.hs  Mutable.hs  New.hs
vector/src/Data/Vector/Generic/Mutable/: Base.hs
vector/src/Data/Vector/Internal/: Check.hs
vector/src/Data/Vector/Mutable/: Unsafe.hs
vector/src/Data/Vector/Primitive/: Mutable.hs  Pattern.hs  Unsafe.hs
vector/src/Data/Vector/Primitive/Mutable/: Unsafe.hs
vector/src/Data/Vector/Storable/: Internal.hs  Mutable.hs  Pattern.hs  Unsafe.hs
vector/src/Data/Vector/Storable/Mutable/: Unsafe.hs
vector/src/Data/Vector/Strict/: Mutable.hs  Pattern.hs  Unsafe.hs
vector/src/Data/Vector/Strict/Mutable/: Unsafe.hs
vector/src/Data/Vector/Unboxed/: Base.hs  Mutable.hs  Unsafe.hs
vector/tests/: Boilerplater.hs  Main.hs  Utilities.hs  doctests.hs
vector/tests-inspect/: Inspect.hs  main.hs
vector/tests-inspect/Inspect/: Alloc.hs  DerivingVia.hs  Fusion.hs
vector/tests-inspect/Inspect/DerivingVia/: OtherFoo.hs
vector/tests-inspect/Test/: Alloc.hs  Ignore.hs  InspectExtra.hs
vector/tests/Tests/: Bundle.hs  Deriving.hs  Move.hs  Specialization.hs
vector/tests/Tests/Vector/: Boxed.hs  Primitive.hs  Property.hs  Storable.hs  Strict.hs  Unboxed.hs  UnitTests.hs
