Name:           vector-benchmarks
Version:        0.10.10
License:        BSD3
License-File:   LICENSE
Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Copyright:      (c) Roman Leshchinskiy 2010-2012
Cabal-Version:  >= 1.2
Build-Type:     Simple

benchmark algorithms
  type: exitcode-stdio-1.0
  Main-Is: Main.hs

  Build-Depends: base >= 2 && < 5,
                 gauge,
                 random >= 1.2,
                 vector

  if impl(ghc<6.13)
    Ghc-Options: -finline-if-enough-args -fno-method-sharing

  Ghc-Options: -O2

  Other-Modules:
        Algo.MutableSet
        Algo.ListRank
        Algo.Rootfix
        Algo.Leaffix
        Algo.AwShCC
        Algo.HybCC
        Algo.Quickhull
        Algo.Spectral
        Algo.Tridiag
        Algo.FindIndexR

        TestData.ParenTree
        TestData.Graph
