Name:           vector-tests
Version:        0.5
License:        BSD3
License-File:   LICENSE
Author:         Max Bolingbroke, Roman Leshchinskiy
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Copyright:      (c) Max Bolinbroke, Roman Leshchinskiy 2008-2009
Homepage:       http://darcs.haskell.org/vector
Category:       Data Structures
Synopsis:       Efficient Arrays
Description:
        Tests for the vector package

Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable "vector-tests"
  Main-Is:  Main.hs

  Extensions: CPP,
              ScopedTypeVariables,
              PatternGuards,
              MultiParamTypeClasses,
              FlexibleContexts,
              Rank2Types,
              TypeSynonymInstances,
              TypeFamilies,
              TemplateHaskell

  Build-Depends: base >= 4 && < 5, template-haskell, vector, random,
                 QuickCheck >= 2, test-framework, test-framework-quickcheck2

  -- Don't let fusion occur or GHC will make our tests less informative in some cases :-)
  Ghc-Options: -O0
  
  -- It's good practice to show all warnings, but since this is just test code let's ignore type sigs
  Ghc-Options: -Wall -fno-warn-orphans -fno-warn-missing-signatures
