Cabal-Version:  3.0
Build-Type:     Simple
Name:           vector-bench-papi
Version:        0.13.1.0
License:        BSD-3-Clause
License-File:   LICENSE

Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Haskell Libraries Team <libraries@haskell.org>
                Alexey Kuleshevich <alexey@kuleshevi.ch>,
                Aleksey Khudyakov <alexey.skladnoy@gmail.com>,
                Andrew Lelechenko <andrew.lelechenko@gmail.com>

Copyright:      (c) Aleksey Khudyakov 2024,

Homepage:       https://github.com/haskell/vector
Bug-Reports:    https://github.com/haskell/vector/issues

Category:       Benchmark
Synopsis:       PAPI based benchmarks for vector-package
Description:
  Benchmarks for vector package which use CPU counter instead of time measurements.

  Note that benchmarks will not be built unless flag -fBenchPAPI is
  specified.

Flag BenchPAPI
  Description: Enable building of benchmarks which use instruction counters.
               It requires libpapi and only works on Linux so it's protected by flag
  Default: False
  Manual: True

library
  default-language: Haskell2010

benchmark algorithms-papi
  if !flag(BenchPAPI) || impl(ghc < 8.2)
    buildable:      False
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   benchmarks
  default-language: Haskell2010

  build-depends:
        base >= 2 && < 5
      , random >= 1.2
      , tasty
      , tasty-papi >= 0.1.2.0
      , vector
      , vector:benchmarks-O2

  ghc-options: -O2
