Name:           vector-stream
Version:        0.1.0.0
-- don't forget to update the changelog file!
License:        BSD3
License-File:   LICENSE
Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     Haskell Libraries Team <libraries@haskell.org>
Copyright:      (c) Roman Leshchinskiy 2008-2012
                    Alexey Kuleshevich 2020-2022,
                    Aleksey Khudyakov 2020-2022,
                    Andrew Lelechenko 2020-2022
Homepage:       https://github.com/haskell/vector
Bug-Reports:    https://github.com/haskell/vector/issues
Category:       Data, Data Structures
Synopsis:       Efficient Streams
Description:
        Simple yet powerful monadic streams that are used
        as a backbone for vector package fusion functionality.

Tested-With:
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.4,
  GHC == 9.0.1,
  GHC == 9.2.3

Cabal-Version:  >=1.10
Build-Type:     Simple

Extra-Source-Files:
      changelog.md
      README.md

Library
  Default-Language: Haskell2010

  Exposed-Modules:
        Data.Stream.Monadic

  Hs-Source-Dirs:
        src

  Build-Depends: base >= 4.9 && < 4.17
               , ghc-prim >= 0.2 && < 0.9

source-repository head
  type:     git
  location: https://github.com/haskell/vector.git
  subdir:   vector-stream
